# MicroPython-MAX31865

./: .gitignore  .pylintrc  Makefile  README.rst  pyproject.toml
examples/: max31865_simpletest.py
max31865/: __init__.py  max31865.py
